fix last change date footer being too close to article text

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -827,6 +827,7 @@ h3:first-child + .duration {
   font-style: italic;
   text-align: right;
   color: #888;
+  margin-top: 0.5rem;
 
   a {
     color: #888;
